# Music-producer

./: .gitignore  AGENTS.md  LICENSE  README.md  _build_agents.py  _download_gdrive.py  _extract_dsp.py  _extract_movement.py  _extract_msp.py  _extract_producers.py  _extract_theory.py
.github/: copilot-instructions.md
dsp-wiley-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
genre-mixing-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
humanizing-programmed-music-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
matriarch-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
matriarch-github-agent/.github/: copilot-instructions.md
matriarch-github-agent/knowledge/: SOURCE.txt  manual_extract.txt  page_index.json
matriarch-github-agent/matriarch_kb/: __init__.py  __main__.py  globals.py  instrument.py  midi.py  modules.py  recipes.py  search.py
monologue-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
movement-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
msp-techniques-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
music-theory-advanced-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
schoenberg-github-agent/: AGENTS.md  LICENSE  README.md  pyproject.toml
schoenberg-github-agent/.github/: copilot-instructions.md
schoenberg-github-agent/knowledge/: core_chapters.txt  manual_extract.txt  page_index.txt  snippets.txt
schoenberg-github-agent/schoenberg_kb/: __init__.py  __main__.py  book.py  chapters.py  concepts.py  exercises.py  forms.py  search.py
(+149 files in other folders)
